# RoViFinalProject

./: .gitignore  CMakeLists.txt  README.md  jointWeights.m  jointWeights.m~
RoVi-finalProject/: ReadMe.txt
RoVi-finalProject/FeatureExtraction/: CMakeLists.txt
RoVi-finalProject/FeatureExtraction/src/: FeatureExtraction.cpp  FeatureExtraction.h  Markers.cpp  Markers.h  main.cpp
RoVi-finalProject/SamplePluginPA10/: .CMakeLists.txt.swp  CMakeLists.txt
RoVi-finalProject/SamplePluginPA10/Build1/: CMakeCache.txt  Makefile  cmake_install.cmake  qrc_resources.cpp  ui_SamplePlugin.h
RoVi-finalProject/SamplePluginPA10/Build1/src/: moc_SamplePlugin.cpp_parameters
RoVi-finalProject/SamplePluginPA10/src/: FeatureExtraction.cpp  FeatureExtraction.h  Marker.hpp  SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  VisualServoing.hpp
RoVi-finalProject/data/: data.mat  dataConverter.m  dataPlotter.m  error3p.txt  errorVis.txt  errors1p.txt  limitsVis.txt  plotGraphError.m  plotGraphLim.m  plotGraphPose.m  pose1p.txt  pose3p.txt
RoVi2-finalProject/: CMakeLists.txt  package.xml
RoVi2-finalProject/src/: Lego.cpp  Lego.h  Lego.hpp  ObjectAvoidance.cpp  ObjectAvoidance.hpp  ObjectAvoidance.json  Planning.cpp  Planning.hpp  QTrees.cpp  QTrees.hpp  Robot.cpp  Robot.hpp  Vision.cpp  Vision.hpp  ip.cpp  ip.h  resources.qrc
Vision/: disparity.cpp
WorkStation_3/: CollisionSetup.xml  WC3_Scene.wc.xml
WorkStation_3/Geometry/: Cage.ac  Cage.stl  Camera.ac  Camera.ipt  Camera.stl  Computer.ac  Computer.stl  Conveyor01.ac  LegoBrickBlue.ac  LegoBrickRed.ac  LegoBrickYellow.ac  LegoBrickYellow.stl  Table.ac  Table.stl
WorkStation_3/WSG50/: WSG50.wc.xml
src/: Lego.cpp  Robot.hpp
ur_caros_example/: CMakeLists.txt
ur_caros_example/src/: ur_caros_example.cpp
